# xmonad-testing

./: .gitignore  .gitmodules  LICENSE  README.md  cabal.project  config.hs  example-config.hs  nixpkgs.nix  stack.yaml  xmonad-testing.cabal
build-scripts/: build-with-cabal-new.sh  build-with-cabal-sandbox.sh  build-with-stack.sh
config/: getting-started-xmonad.hs
configs/issues/: 009-colormap.hs  118-avoid-struts.hs  99-urgency-remind.hs
maintainer/: test.nix
scripts/: build-with-cabal-sandbox.sh  build-with-stack.sh
